<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Prevention"
    android:background="@drawable/ims">


    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/handwash"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/round_edge2"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="@string/handwash"
        android:textColorLink="@color/white"
        android:paddingTop="-10sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="15sp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.480" />

    <TextView
        android:id="@+id/mask"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/round_edge2"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="@string/mask"
        android:textColorLink="@color/white"
        android:paddingTop="-10sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="15sp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.640" />

    <TextView
        android:id="@+id/prevention"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/round_edge2"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:paddingTop="-10sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="15sp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeStepGranularity="2sp"
        android:textColorLink="@color/white"
        android:text="@string/prev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.320"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/distance"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/round_edge2"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="@string/sdistance"
        android:textColorLink="@color/white"
        android:paddingTop="-10sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="15sp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.800" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="199dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/prevention_mask" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="113dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/stand2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="92dp"
        android:layout_height="94dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79"
        app:srcCompat="@drawable/sneeze" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625"
        app:srcCompat="@drawable/prevention3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/prevention2" />

</androidx.constraintlayout.widget.ConstraintLayout>